style.css
/*** RESET ***/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    outline: 0;
    list-style-type: none;
    font-family: 'Roboto', sans-serif;
}

body {
    background-color: #fff;
}

/*** HEADER STYLES ***/

.main-menu {
    height: 8rem;
    background: url(images/logo.png) no-repeat 13.65%;
    display: flex;
    align-items: center;
    justify-content: flex-end;
}

ul.main-menu__list {
    display: flex;
    margin-right: 11.35%;
}

.main-menu__list--item {
    padding: 1.5rem;
}

.main-menu__list--link {
    text-decoration: none;
    text-transform: uppercase;
    color: #929292;
    font-size: 1.1rem;
}

.main-menu__list--link:hover {
    color: #000;
}

.main-banner {
    background: #000;
    position: relative;
}

.main-banner img {
    display: block;
    width: 100%;
    opacity: .3;
}

.main-banner__container {
    width: 100%;
    position: absolute;
    left: 50%;
    top: 35%;
    transform: translate(-50%, -35%);
    text-align: center;
}

.main-banner__container h1 {
    color: #fff;
    text-transform: uppercase;
    font-size: 5rem;
    font-weight: 900;
    padding: 1.5rem;
    letter-spacing: 1.5px;
    line-height: 1.25;
    text-shadow: 2px 2px 16px #000;
}

.main-banner__container p {
    color: #bbb;
    font-size: 1.4rem;
    margin-bottom: 5rem;
    font-family: 'Roboto Slab', serif;
}

.main-banner__button {
    text-decoration: none;
    text-transform: uppercase;
    color: #fff;
    background: #7cc576;
    padding: 1.25rem 2.5rem;
    border-radius: 60px;
    letter-spacing: 0.25px;
    font-weight: bold;
    text-shadow: 1px 1px 16px #000;
}

.main-banner__button:hover {
    background: #fff;
    color: #000;
    text-shadow: none;
    font-weight: 900;
}

/************************/

/*** SECTION 1 STYLES ***/

.block--elem1 {
    margin: 7rem 12.6%;
    text-align: center;
}

.block--elem1__header {
    margin-bottom: 5rem;
}

.block--elem1__header h2 {
    text-transform: uppercase;
    font-size: 2.75rem;
    font-weight: 900;
    color: #222;
}

.block--elem1__header p {
    color: #929292;
    font-family: 'Roboto Slab', serif;
    font-size: 1.3rem;
    margin-top: 0.25rem;
}

.block--elem1__list {
    display: flex;
}

.block--elem1__list--item {
    display: flex;
    flex-flow: column;
    height: 9.375rem;
    padding-top: 5rem;
}

.block--elem1__list--item:nth-child(1) {
    background: url(images/icon-heart.png) no-repeat center 0;
}

.block--elem1__list--item:nth-child(2) {
    padding-left: 17.37%;
    padding-right: 17.37%;
    background: url(images/icon-mobile.png) no-repeat center 0;
}

.block--elem1__list--item:nth-child(3) {
    background: url(images/icon-graph.png) no-repeat center 0;
}

.block--elem1__list--item h3 {
    color: #222;
    text-transform: uppercase;
    font-size: 1.5rem;
    font-weight: 900;
    padding-bottom: .75rem;
}

.block--elem1__list--item p {
    font-family: 'Roboto Slab', serif;
    color: #929292;
    font-size: .9rem;
}

/************************/

/*** SECTION 2 STYLES ***/

.block--elem2 {
    height: 38.5rem;
    display: flex;
}

.block--elem2__gear {
    height: 100%;
    width: 27.5%;
    background: #e9e9e9;
    background-image: url(images/gear.png);
    background-repeat: no-repeat;
    background-position: 16.65vw;
    background-size: 76%;
}

.block--elem2__container {
    width: 72.5%;
    background: #000;
    position: relative;
}

.block--elem2__bg-img {
    height: 100%;
    background-image: url(images/just-relax.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    opacity: .4;
}

.block--elem2__content {
    position: absolute;
    left: 6rem;
    top: 6rem;
}

.block--elem2__content h2 {
    text-transform: uppercase;
    color: #fff;
    font-size: 2.75rem;
    margin-bottom: 2rem;
}

.block--elem2__content h2 span {
    color: #7cc576;
}

.block--elem2__content p {
    color: #bbb;
    font-family: 'Roboto Slab', serif;
    margin-bottom: 1.75rem;
}

ul.block--elem2__list {
    margin-bottom: 3rem;
}

.block--elem2__list--item {
    font-family: 'Roboto Slab', serif;
    color: #bbb;
    display: flex;
    align-items: center;
}

.block--elem2__list--item:nth-child(2) {
    padding: 1.2rem 0;
}

.fa-check-circle {
    padding-right: 1.25rem;
    font-size: 2rem;
}

.block--elem2__button {
    text-decoration: none;
    text-transform: uppercase;
    color: #fff;
    background: #7cc576;
    padding: 1.25rem 2.25rem;
    border-radius: 60px;
    font-weight: bold;
    letter-spacing: 0.25px;
    text-shadow: 1px 1px 16px #000;
}

.block--elem2__button:hover {
    background: #fff;
    color: #000;
    text-shadow: none;
    font-weight: 900;
}

/************************/

/*** SECTION 3 STYLES ***/

.block--elem3 {
    margin: 7rem 0 7rem 12.6%;
    background: url(images/ipad-air.jpg) no-repeat right 4.25rem;
    background-size: 45rem;
}

.block--elem3__header {
    text-align: center;
    margin-bottom: 5rem;
    margin-right: 14.45%;
}

.block--elem3__header h2 {
    text-transform: uppercase;
    font-size: 2.75rem;
    font-weight: 900;
    color: #222;
}

.block--elem3__header p {
    color: #929292;
    font-family: 'Roboto Slab', serif;
    font-size: 1.3rem;
    margin-top: 0.25rem;
}

.block--elem3__container h3 {
    color: #222;
    text-transform: uppercase;
    font-size: 1.5rem;
    font-weight: 900;
    padding-bottom: 1.25rem;
}

.block--elem3__container p {
    font-family: 'Roboto Slab', serif;
    color: #929292;
    margin-bottom: 1.25rem;
    width: 30.5%;
}

.block--elem3__container p:last-of-type {
    margin-top: 1.25rem;
    width: 31%;
}

.block--elem3__list--item {
    color: #222;
    font-size: 1.5rem;
    font-weight: 900;
    margin-bottom: 1.5rem;
}

.block--elem3__list--item::before {
    content: '';
    display: inline-flex;
    align-items: center;
    width: 70px;
    height: 70px;
    border: 3px solid #000;
    border-radius: 50%;
    margin-right: 1rem;
}
/* ... */

